# trainwreck

./: .gitignore  .trainwreck-mcp.json.example  .trainwreck.db  FIXES_APPLIED.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/trainwreck/: __init__.py  cli.py
src/trainwreck/agent/: __init__.py  executor.py  loop.py  planner.py  reflector.py  step_plan.py
src/trainwreck/llm/: __init__.py  abacus_client.py  base.py  factory.py  openai_client.py  types.py
src/trainwreck/llm/local/: __init__.py  gpt4all_client.py  hf_tgi.py  jan.py  koboldcpp.py  llamacpp.py  lmstudio.py  localai.py  ollama.py  oobabooga.py  vllm.py
src/trainwreck/memory/: __init__.py  sqlite_store.py
src/trainwreck/tools/: __init__.py  abacus.py  bash.py  git.py  mcp.py  powershell.py
