[tool.poetry]
name = "trainwreck"
version = "0.1.0"
description = "TrainWreck – a vibe coding agent with feedback loops, local AI models, and multi-tool execution"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yourusername/trainwreck"
repository = "https://github.com/yourusername/trainwreck"
keywords = ["ai", "coding-agent", "llm", "automation", "devops", "trainwreck"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "trainwreck", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"

# Core dependencies
httpx = "^0.27.0"
tenacity = "^8.2.3"
click = "^8.1.7"
pydantic = "^2.6.0"
python-dotenv = "^1.0.1"

# Git operations
GitPython = "^3.1.41"

# LLM clients
openai = "^1.12.0"

# Local model support - optional but recommended
gpt4all = {version = "^2.1.0", optional = true}

# Structured logging
structlog = "^24.1.0"
python-json-logger = "^2.0.7"

# Observability
prometheus-client = "^0.19.0"

# Database
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"

# Utilities
rich = "^13.7.0"
pyyaml = "^6.0.1"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.4"
pytest-mock = "^3.12.0"
pytest-httpx = "^0.29.0"
responses = "^0.25.0"

# Linting & formatting
ruff = "^0.2.1"
black = "^24.1.1"
isort = "^5.13.2"

# Type checking
mypy = "^1.8.0"
types-pyyaml = "^6.0.12.12"
types-toml = "^0.10.8.7"
types-requests = "^2.31.0.20240125"

# Documentation
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.9"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

# Development tools
ipython = "^8.21.0"
pre-commit = "^3.6.0"

[tool.poetry.extras]
gpt4all = ["gpt4all"]
all = ["gpt4all"]

[tool.poetry.scripts]
trainwreck = "trainwreck.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py39"
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
]
ignore = [
    "E501",
    "B008",
    "C901",
    "W191",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["ARG", "S101"]

[tool.ruff.isort]
known-first-party = ["trainwreck"]

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
known-first-party = ["trainwreck"]
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "git.*",
    "gpt4all.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=trainwreck",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "llm: marks tests that require LLM access",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
